# tauri-tts-engine-discovery-demo

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/tauri-plugin-tts-engines/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-tts-engines/android/: .gitignore  build.gradle.kts
src-tauri/plugins/tauri-plugin-tts-engines/android/src/main/java/com/pengli/plugin/tts_engines/: TtsEnginesPlugin.kt
src-tauri/plugins/tauri-plugin-tts-engines/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-tts-engines/permissions/autogenerated/commands/: list_tts_engines.toml  stop_speak.toml
src-tauri/plugins/tauri-plugin-tts-engines/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-tts-engines/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs
